--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/ForbitTech/Rangs-Client-Privacy-Policy",
+  "homepage": "https://forbittech.github.io/Rangs-Client-Privacy-Policy/",
   "name": "rangsclient",
   "version": "0.1.0",
   "private": true,
